<!--
  ~ Copyright (C) 2017 Drakeet <drakeet.me@gmail.com>
  ~
  ~ This file is part of rebase-android
  ~
  ~ rebase-android is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ rebase-android is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
  ~
  ~ See the GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with rebase-android. If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>

    <!--global-->
    <string name="rebase_name">日常</string>
    <string name="rebase_name_debug">日常.DEBUG</string>
    <string name="double_click_to_exit">双击返回退出</string>
    <string name="favorite">收藏</string>
    <string name="undo_favorite">取消收藏</string>
    <string name="show_more">显示更多</string>
    <string name="ok">@android:string/ok</string>
    <string name="cancel">@android:string/cancel</string>

    <!--main-->
    <string name="action_change_theme">换肤</string>

    <!--about-->
    <string name="about">关于</string>
    <string name="share">分享</string>
    <string name="contact">联系</string>
    <string name="card_app">日常 是一款由 drakeet 负责推荐和分享各种好玩新鲜的栏目应用</string>
    <string name="card_story">有一天我在微信朋友圈里说过要开发这么一个项目，它的定位就是移动客户端级别的 WordPress.\n\nWordPress 是一款自由开源的博客软件和内容管理系统，它帮助无数人在网页端开发和搭建自己的网站，我的个人网站 https://drakeet.me 也正是采用 WordPress 搭建，这是一个伟大的产品。\n\n而我们要做的就是将它的理念复刻到手机上，实现人人可以快速创建私人博客 App 并与世界相连，我给它取名叫 Rebase.\n\n当有一天我决定再也不看、不发微信朋友圈了，Rebase 的想法便更加急切在我脑袋中萦绕，直到它现在呈现在你面前。\n\n这个应用程序是 Rebase 项目的客户端之一，它是完全开源的，包括客户端源代码、服务端源代码，以及即将开源的 Sketch 设计稿源文件，如果你很喜欢它，就加入进来吧！\n\n开源地址：https://github.com/drakeet/rebase-android</string>
    <string name="slogan">Drakeet 的一天</string>
    <string name="tip_network_is_not_available">网络未连接或不可用，请检查后重试</string>
    <string name="label_favorite_shortcut">@string/favorite</string>
    <string name="share_message">推荐一款 drakeet 负责做推荐与分享应用：日常 https://drakeet.me/rebase-home</string>
    <string name="label_about_shortcut">@string/about</string>

    <!--login-->
    <string name="title_login_in">登陆</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="prompt_username">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_login">登陆</string>
    <string name="error_invalid_user_name">This user name is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">The user name or password is incorrect</string>
    <string name="error_field_required">不能为空</string>
    <string name="sign_up">Sign up</string>
    <string name="prompt_re_password">Repeat password</string>
    <string name="sign_up_successful">Sign up successful</string>
    <string name="login_successfully">登陆成功</string>

    <!--admin-->
    <string name="title_admin">管理后台</string>
    <string name="prompt_category">category</string>
    <string name="prompt_title">title</string>
    <string name="prompt_content">content</string>
    <string name="prompt_url">url</string>
    <string name="prompt_cover_url">cover_url</string>
    <string name="action_post">发布</string>
    <string name="has_posted_at">已发布于：</string>

</resources>
